tests/snapshots/snapshot_tests__imported_schema_b_ast.snap
---
source: tests/snapshot_tests.rs
expression: all_asts
---
[
    AstRoot {
        path: "tests/schemas/imported_schema_b.poly",
        file_imports: [],
        definitions: [
            Enum(
                Enum {
                    metadata: [],
                    name: Some(
                        "StatusB",
                    ),
                    variants: [
                        EnumVariant {
                            metadata: [],
                            name: Some(
                                "Enabled",
                            ),
                            value: None,
                            inline_comment: None,
                        },
                        EnumVariant {
                            metadata: [],
                            name: Some(
                                "Disabled",
                            ),
                            value: None,
                            inline_comment: None,
                        },
                    ],
                },
            ),
        ],
        renames: [],
    },
]
