tests/snapshots/snapshot_tests__imported_schema_b_ir.snap
---
source: tests/snapshot_tests.rs
expression: ir_context
---
SchemaContext {
    files: [
        FileDef {
            path: "imported_schema_b.poly",
            namespaces: [
                NamespaceDef {
                    name: "",
                    datasource: None,
                    items: [
                        Enum(
                            EnumDef {
                                name: "StatusB",
                                fqn: "StatusB",
                                items: [
                                    Member(
                                        EnumMember {
                                            name: "Enabled",
                                            value: Some(
                                                0,
                                            ),
                                        },
                                    ),
                                    Member(
                                        EnumMember {
                                            name: "Disabled",
                                            value: Some(
                                                1,
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                },
            ],
        },
    ],
}
