tests/snapshots/snapshot_tests__inline_embed_table_ir.snap
---
source: tests/snapshot_tests.rs
expression: ir_context
---
SchemaContext {
    files: [
        FileDef {
            path: "inline_embed_table.poly",
            namespaces: [
                NamespaceDef {
                    name: "",
                    items: [
                        Struct(
                            StructDef {
                                name: "Character",
                                fqn: "Character",
                                header: [],
                                items: [
                                    Field(
                                        FieldDef {
                                            name: "id",
                                            field_type: TypeRef {
                                                original: "u32",
                                                fqn: "u32",
                                                namespace_fqn: "",
                                                type_name: "u32",
                                                parent_type_path: "",
                                                lang_type: "u32",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [
                                                "Key",
                                            ],
                                            is_primary_key: true,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                        },
                                    ),
                                    Field(
                                        FieldDef {
                                            name: "name",
                                            field_type: TypeRef {
                                                original: "string",
                                                fqn: "string",
                                                namespace_fqn: "",
                                                type_name: "string",
                                                parent_type_path: "",
                                                lang_type: "string",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                        },
                                    ),
                                    Field(
                                        FieldDef {
                                            name: "inventory",
                                            field_type: TypeRef {
                                                original: "List<Inventory>",
                                                fqn: "Character.Inventory",
                                                namespace_fqn: "Character",
                                                type_name: "Inventory",
                                                parent_type_path: "",
                                                lang_type: "List<Inventory>",
                                                is_primitive: false,
                                                is_struct: true,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: true,
                                                inner_type: Some(
                                                    TypeRef {
                                                        original: "Inventory",
                                                        fqn: "Character.Inventory",
                                                        namespace_fqn: "Character",
                                                        type_name: "Inventory",
                                                        parent_type_path: "",
                                                        lang_type: "Inventory",
                                                        is_primitive: false,
                                                        is_struct: true,
                                                        is_enum: false,
                                                        is_option: false,
                                                        is_list: false,
                                                        inner_type: None,
                                                    },
                                                ),
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                        },
                                    ),
                                    EmbeddedStruct(
                                        StructDef {
                                            name: "Inventory",
                                            fqn: "Character.Inventory",
                                            header: [],
                                            items: [
                                                Field(
                                                    FieldDef {
                                                        name: "item_id",
                                                        field_type: TypeRef {
                                                            original: "u32",
                                                            fqn: "u32",
                                                            namespace_fqn: "",
                                                            type_name: "u32",
                                                            parent_type_path: "",
                                                            lang_type: "u32",
                                                            is_primitive: true,
                                                            is_struct: false,
                                                            is_enum: false,
                                                            is_option: false,
                                                            is_list: false,
                                                            inner_type: None,
                                                        },
                                                        attributes: [],
                                                        is_primary_key: false,
                                                        is_unique: false,
                                                        is_index: false,
                                                        foreign_key: None,
                                                    },
                                                ),
                                                Field(
                                                    FieldDef {
                                                        name: "quantity",
                                                        field_type: TypeRef {
                                                            original: "u32",
                                                            fqn: "u32",
                                                            namespace_fqn: "",
                                                            type_name: "u32",
                                                            parent_type_path: "",
                                                            lang_type: "u32",
                                                            is_primitive: true,
                                                            is_struct: false,
                                                            is_enum: false,
                                                            is_option: false,
                                                            is_list: false,
                                                            inner_type: None,
                                                        },
                                                        attributes: [],
                                                        is_primary_key: false,
                                                        is_unique: false,
                                                        is_index: false,
                                                        foreign_key: None,
                                                    },
                                                ),
                                                Field(
                                                    FieldDef {
                                                        name: "properties",
                                                        field_type: TypeRef {
                                                            original: "List<Properties>",
                                                            fqn: "Character.Inventory.Properties",
                                                            namespace_fqn: "Character.Inventory",
                                                            type_name: "Properties",
                                                            parent_type_path: "",
                                                            lang_type: "List<Properties>",
                                                            is_primitive: false,
                                                            is_struct: true,
                                                            is_enum: false,
                                                            is_option: false,
                                                            is_list: true,
                                                            inner_type: Some(
                                                                TypeRef {
                                                                    original: "Properties",
                                                                    fqn: "Character.Inventory.Properties",
                                                                    namespace_fqn: "Character.Inventory",
                                                                    type_name: "Properties",
                                                                    parent_type_path: "",
                                                                    lang_type: "Properties",
                                                                    is_primitive: false,
                                                                    is_struct: true,
                                                                    is_enum: false,
                                                                    is_option: false,
                                                                    is_list: false,
                                                                    inner_type: None,
                                                                },
                                                            ),
                                                        },
                                                        attributes: [],
                                                        is_primary_key: false,
                                                        is_unique: false,
                                                        is_index: false,
                                                        foreign_key: None,
                                                    },
                                                ),
                                                EmbeddedStruct(
                                                    StructDef {
                                                        name: "Properties",
                                                        fqn: "Character.Inventory.Properties",
                                                        header: [],
                                                        items: [
                                                            Field(
                                                                FieldDef {
                                                                    name: "key",
                                                                    field_type: TypeRef {
                                                                        original: "string",
                                                                        fqn: "string",
                                                                        namespace_fqn: "",
                                                                        type_name: "string",
                                                                        parent_type_path: "",
                                                                        lang_type: "string",
                                                                        is_primitive: true,
                                                                        is_struct: false,
                                                                        is_enum: false,
                                                                        is_option: false,
                                                                        is_list: false,
                                                                        inner_type: None,
                                                                    },
                                                                    attributes: [],
                                                                    is_primary_key: false,
                                                                    is_unique: false,
                                                                    is_index: false,
                                                                    foreign_key: None,
                                                                },
                                                            ),
                                                            Field(
                                                                FieldDef {
                                                                    name: "value",
                                                                    field_type: TypeRef {
                                                                        original: "string",
                                                                        fqn: "string",
                                                                        namespace_fqn: "",
                                                                        type_name: "string",
                                                                        parent_type_path: "",
                                                                        lang_type: "string",
                                                                        is_primitive: true,
                                                                        is_struct: false,
                                                                        is_enum: false,
                                                                        is_option: false,
                                                                        is_list: false,
                                                                        inner_type: None,
                                                                    },
                                                                    attributes: [],
                                                                    is_primary_key: false,
                                                                    is_unique: false,
                                                                    is_index: false,
                                                                    foreign_key: None,
                                                                },
                                                            ),
                                                        ],
                                                        indexes: [],
                                                        relations: [],
                                                    },
                                                ),
                                            ],
                                            indexes: [],
                                            relations: [],
                                        },
                                    ),
                                ],
                                indexes: [
                                    IndexDef {
                                        name: "ById",
                                        field_name: "id",
                                        field_type: TypeRef {
                                            original: "u32",
                                            fqn: "u32",
                                            namespace_fqn: "",
                                            type_name: "u32",
                                            parent_type_path: "",
                                            lang_type: "u32",
                                            is_primitive: true,
                                            is_struct: false,
                                            is_enum: false,
                                            is_option: false,
                                            is_list: false,
                                            inner_type: None,
                                        },
                                        is_unique: true,
                                    },
                                ],
                                relations: [],
                            },
                        ),
                    ],
                },
            ],
        },
    ],
}
