tests/snapshots/snapshot_tests__inline_enum_field_table_ast.snap
---
source: tests/snapshot_tests.rs
expression: all_asts
---
[
    AstRoot {
        path: "tests/schemas\\inline_enum_field_table.poly",
        file_imports: [],
        definitions: [
            Table(
                Table {
                    metadata: [],
                    name: Some(
                        "Product",
                    ),
                    members: [
                        Field(
                            Regular(
                                RegularField {
                                    metadata: [],
                                    name: Some(
                                        "id",
                                    ),
                                    field_type: TypeWithCardinality {
                                        base_type: Basic(
                                            U32,
                                        ),
                                        cardinality: None,
                                    },
                                    constraints: [
                                        PrimaryKey,
                                    ],
                                    field_number: None,
                                },
                            ),
                        ),
                        Field(
                            Regular(
                                RegularField {
                                    metadata: [],
                                    name: Some(
                                        "name",
                                    ),
                                    field_type: TypeWithCardinality {
                                        base_type: Basic(
                                            String,
                                        ),
                                        cardinality: None,
                                    },
                                    constraints: [],
                                    field_number: None,
                                },
                            ),
                        ),
                        Field(
                            InlineEnum(
                                InlineEnumField {
                                    metadata: [],
                                    name: Some(
                                        "status",
                                    ),
                                    variants: [
                                        EnumVariant {
                                            metadata: [],
                                            name: Some(
                                                "Available",
                                            ),
                                        },
                                        EnumVariant {
                                            metadata: [],
                                            name: Some(
                                                "OutOfStock",
                                            ),
                                        },
                                        EnumVariant {
                                            metadata: [],
                                            name: Some(
                                                "Discontinued",
                                            ),
                                        },
                                    ],
                                    cardinality: None,
                                    field_number: None,
                                },
                            ),
                        ),
                    ],
                },
            ),
        ],
    },
]
